@@ -5,3 +5,6 @@ backendbindingsdir = $(monodevelopdir)/AddIns/AddIns/BackendBindings
 backendbindings_DATA = BackendBindings.addin
 
 EXTRA_DIST = $(backendbindings_DATA)
+
+CLEANFILES = CSharpBinding.dll
+
