@@ -5,3 +5,5 @@ startpagedir = $(monodevelopdir)/AddIns/AddIns/Misc/StartPage
 startpage_DATA = StartPage.addin
 
 EXTRA_DIST = $(startpage_DATA)
+CLEANFILES = MonoDevelop.StartPage.dll
+
