@@ -1,3 +1,9 @@
+2004-03-09  John Luke  <jluke@cfl.rr.com>
+
+	* build/AddIns/AddIns/BackendBindings/Makefile.am:
+	* build/AddIns/AddIns/Misc/StartPage/Makefile.am:
+	remove dlls on make clean, bug #55386
+
 2004-03-07  John Luke  <jluke@cfl.rr.com>
 
 	* src/Main/Base/Makefile.am:
